frontend/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: rplace-frontend
  namespace: rplace
spec:
  type: ClusterIP
  selector:
    app: frontend
  ports:
  - protocol: TCP
    port: 5173
    targetPort: 80
