frontend/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: http-frontend
  namespace: rplace
  annotations:
    kubernetes.io/ingress.class: nginx
  spec:
    rules:
    - host: rplace.inpt.fr
      http:
        paths:
        - path: /
          rplace:
            serviceName: rplace-frontend
            servicePort: 80
